trying to fix notes page, for some reason newnote keeps squishing notes

--- a/src/App.css
+++ b/src/App.css
@@ -59,30 +59,35 @@
 }
 .note-layout {
   align-items: baseline;
-  margin-left: 20%;
-  min-width: 100vh;
-  position: absolute;
-  width: 80vh;
-  height: 100%;
+  margin-left: 2%;
+  min-width: 100vw;
+  display: flex;
+  justify-content: flex-start;
+  overflow-x: hidden;
+  width: 80vw;
+  height: 100vh;
+  position: relative;
 }
 
 .notes {
   overflow-y: scroll;
   overflow-x: hidden;
-  float: left;
-  height: 80%;
-  width: 50%;
-  margin-right: 10%;
-  position: relative;
+  top: 40%;
+  margin-left: 10%;
+  height: 30em;
+  width: 550px;
+  margin-right: 1em;
 }
 .NewNote {
-  float: right;
-  width: 40%;
-  position: relative;
+  width: 450px;
+  /* margin-left: 50%;
+  top: 42%; */
 }
 .newNoteForm {
-  top: 0%;
-  float: right;
+  width: 400px;
+  margin-left: 3em;
+  /* top: 0%; */
+  /* float: right; */
 }
 
 /* userpage */
@@ -291,7 +296,7 @@ a {
   text-align: center;
   background: #b6d4e1;
   box-shadow: 0 0 4px 4px white;
-  width: 99%;
+  width: 30em;
   height: 40px;
   border-width: 1px;
   border-radius: 5px;
@@ -301,7 +306,7 @@ a {
   border-radius: 5px;
   text-align: center;
   height: 12%;
-  width: 99%;
+  width: 30em;
   background: #b6d4e1;
   box-shadow: 0 0 3px 3px white;
   border-width: 1px;
@@ -312,14 +317,14 @@ a {
   background: #b6d4e1;
   box-shadow: 0 0 3px 3px white;
   height: 20%;
-  width: 99%;
+  width: 30em;
   border-radius: 5px;
   border-width: 1px;
 }
 .content-div {
   /* border-style: solid; */
   border-width: 1px;
-  width: 99%;
+  width: 30em;
   background: #b6d4e1;
   box-shadow: 0 0 3px 3px white;
   height: auto;
@@ -332,12 +337,6 @@ a {
   font-weight: bold;
 }
 /*  newNote */
-.newNoteForm {
-  margin-left: 13vh;
-  width: 100%;
-
-  float: right;
-}
 
 h3 {
   text-align: center;
@@ -523,13 +522,14 @@ body {
   height: 100%;
   width: 100%;
   overflow-y: hidden;
-  overflow-x: auto;
-  position: absolute;
+  overflow-x: hidden;
+  position: relative;
 }
 .login-container {
   min-height: 100vh;
   min-width: 45%;
   position: absolute;
+  left: 0;
   /* background: #B5C8D6; */
   background: url("https://images.unsplash.com/photo-1533103601126-a65ecc2cfc39?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80");
   -webkit-background-size: cover;
@@ -541,12 +541,12 @@ body {
 .login-div {
   height: 100%;
   padding: 0;
+  min-width: 100%;
   /* min-width: 55%; */
   /* width: auto; */
   background-color: #f7f7f7;
-  /* padding: 173px 55px 55px; */
-  /* position: absolute; */
   margin-left: 40%;
+  margin-right: 0;
   border: 1px solid black;
   background: #2575fc;
 }
@@ -554,10 +554,10 @@ body {
   text-align: center;
 }
 .loginformtitle {
-  margin-top: 10%;
-  /* margin-left: 20%;
-  margin-right: 20%;
-  width: 60%; */
+  position: absolute;
+  left: 50%;
+  right: 0;
+  top: 35%;
 }
 .login-form {
   justify-content: center;
